
- Fixes album view - when scales generation failed, 
  file name appeared twice.
  Refs https://dev.plone.org/ticket/13082.

- PEP 8 (ignoring W602, E301, E501 and E701).
  [hvelarde]

- Deprecated aliases were replaced on tests.
  [hvelarde]

- iCal export: Don't escape COLON character in TEXT property.
  Fixes http://dev.plone.org/ticket/11540.
  [patch by jenskl, applied by kleist]


2.1.7 (2012-04-09)
------------------

- Restored icon display in topic tabular view
  [tom_gross]


2.1.6 (2012-01-26)
------------------

- Fix the change/modify permission used for changing or managing
  Topic/Collection criteria.
  [rossp]

- Calculate the localized datetime string based on UTC time. Refs
  https://dev.plone.org/ticket/12197.
  [malthe, ajung]

- Replace getParentNode() with __parent__ / aq_parent as appropriate.
  [elro]

2.1.5 (2011-10-06)
------------------

- Enable sorting by the getObjPositionInParent index.
  [davisagli]


2.1.4 (2011-08-31)
------------------

- Avoid critical error if for any reason,
  constrain type mode is set to ACQUIRE on a folder at the root level.
  Refs http://dev.plone.org/plone/ticket/11950#comment:3
  [yulka, thomasdesvenain]

- Fixed a bug in listSubtopics that caused unauthorized exceptions when
  subtopics were private
  [afd]

- Make relatedItems sortable. Fixes http://dev.plone.org/plone/ticket/12098
  [fRiSi]

2.1.3 (2011-07-12)
------------------

- PortalType-criteria should use archetype_name as value when querying for the
  Type-index. Fixes http://dev.plone.org/plone/ticket/11913
  [WouterVH]

- NonRefCatalogContent-objects, e.g. criteria, should not obtain a UUID.
  Fixes http://dev.plone.org/plone/ticket/11904
  [WouterVH]

- When a folder is not of the same type than its parent,
  if this folder acquires constraint,
  the allowed types are the intersection of globally allowed types in folder
  and locally allowed types of its parent.
  This fixes http://dev.plone.org/plone/ticket/11950.
  [thomasdesvenain]
