@@ -18,6 +18,8 @@ Changelog
   Fixes http://dev.plone.org/ticket/11540.
   [patch by jenskl, applied by kleist]
 
+- Changed deprecated getSiteEncoding to hardcoded `utf-8`
+  [tom_gross]
 
 2.1.7 (2012-04-09)
 ------------------
